font jumping fix

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -63,6 +63,6 @@ a {
 input,
 input::placeholder,
 button {
-  font-family: 'Roboto', 'Helvetica', sans-serif;
+  font-family: 'Helvetica';
 }
   
