--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -85,6 +85,11 @@
                 & {
                     max-height: 140px;
                     box-shadow: inset 0 -1px 0 #e0e2e8;
+                    height: 10;
+                }
+
+                &:last-child {
+                    box-shadow: none;
                 }
 
                 th {
@@ -99,10 +104,6 @@
                         padding-right: 20px;
                     }
 
-                }
-
-                & {
-                    height: 10;
                 }
 
             }
